--- a/tests/za.co.grindrodbank.a3s-identity-server.tests/za.co.grindrodbank.a3s-identity-server.tests.csproj
+++ b/tests/za.co.grindrodbank.a3s-identity-server.tests/za.co.grindrodbank.a3s-identity-server.tests.csproj
@@ -30,6 +30,7 @@
     <PackageReference Include="NSubstitute" Version="4.2.1" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1" />
+    <PackageReference Include="IdentityServer4" Version="2.5.3" />
   </ItemGroup>
 
   <ItemGroup>
