New TermsOfService Controller and AccountController cleanup

--- a/src/za.co.grindrodbank.a3s-identity-server/za.co.grindrodbank.a3s-identity-server.csproj
+++ b/src/za.co.grindrodbank.a3s-identity-server/za.co.grindrodbank.a3s-identity-server.csproj
@@ -24,6 +24,7 @@
     <Folder Include="Extensions\" />
     <Folder Include="Exceptions\" />
     <Folder Include="Repositories\" />
+    <Folder Include="Quickstart\TermsOfService\" />
   </ItemGroup>
   <ItemGroup>
     <Content Update="nlog.config">
