Refactoring the debug logs within A3S security contract processing to be much more detailed and versbose, with references to the YAML path that is being operated upin in the logs.

--- a/src/za.co.grindrodbank.a3s/nlog.config
+++ b/src/za.co.grindrodbank.a3s/nlog.config
@@ -10,11 +10,11 @@
     <target xsi:type="File"
             name="logFile1"
             fileName="./a3s.log"
-            layout="${date:format=yyyy-MM-dd HH\:mm\:ss.fff} [${threadid}] [${level}] [${callsite:className=true:methodName=true}] ${message} ${exception}">
+            layout="${date:format=yyyy-MM-dd HH\:mm\:ss.fff} [${level}] ${message} ${exception}">
     </target>
     <target name="logconsole" 
             xsi:type="Console" 
-            layout="${date:format=yyyy-MM-dd HH\:mm\:ss.fff} [${threadid}] [${level}] [${callsite:className=true:methodName=true}] ${message} ${exception}" />
+            layout="${date:format=yyyy-MM-dd HH\:mm\:ss.fff} [${level}] ${message} ${exception}" />
   </targets>
 <!-- rules to map from logger name to target -->
   <rules>
