Archive Editor extract files implemented with major improvements

--- a/src/za.co.grindrodbank.a3s-identity-server/za.co.grindrodbank.a3s-identity-server.csproj
+++ b/src/za.co.grindrodbank.a3s-identity-server/za.co.grindrodbank.a3s-identity-server.csproj
@@ -182,5 +182,8 @@
     <Compile Include="..\za.co.grindrodbank.a3s\Exceptions\ArchiveException.cs">
       <Link>Exceptions\ArchiveException.cs</Link>
     </Compile>
+    <Compile Include="..\za.co.grindrodbank.a3s\Models\InMemoryFile.cs">
+      <Link>Models\InMemoryFile.cs</Link>
+    </Compile>
 </ItemGroup>
 </Project>
