Terms Of Service Index view and accompanying JavaScript file.

--- a/src/za.co.grindrodbank.a3s-identity-server/za.co.grindrodbank.a3s-identity-server.csproj
+++ b/src/za.co.grindrodbank.a3s-identity-server/za.co.grindrodbank.a3s-identity-server.csproj
@@ -31,6 +31,7 @@
     <Folder Include="Exceptions\" />
     <Folder Include="Repositories\" />
     <Folder Include="Quickstart\TermsOfService\" />
+    <Folder Include="Views\TermsOfService\" />
   </ItemGroup>
   <ItemGroup>
     <Content Update="nlog.config">
