--- a/tests/za.co.grindrodbank.a3s-identity-server.tests/za.co.grindrodbank.a3s-identity-server.tests.csproj
+++ b/tests/za.co.grindrodbank.a3s-identity-server.tests/za.co.grindrodbank.a3s-identity-server.tests.csproj
@@ -7,10 +7,10 @@
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <LangVersion>latestmajor</LangVersion>
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <LangVersion>latestmajor</LangVersion>
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="coverlet.msbuild" Version="2.7.0">
