--- a/shared-libraries/resource-server-policy-enforcement/za.co.grindrodbank.security.java/pom.xml
+++ b/shared-libraries/resource-server-policy-enforcement/za.co.grindrodbank.security.java/pom.xml
@@ -2,16 +2,9 @@
 <!--
 
     *************************************************
-    Copyright Grindrod Bank Limited 2019, All Rights Reserved.
+    Copyright (c) 2019, Grindrod Bank Limited
+    License MIT: https://opensource.org/licenses/MIT
     **************************************************
-    NOTICE:  All information contained herein is, and remains
-    the property of Grindrod Bank Limited.
-    The intellectual and technical concepts contained
-    herein are proprietary to Grindrod Bank Limited
-    and are protected by trade secret or copyright law.
-    Use, dissemination or reproduction of this information/material
-    is strictly forbidden unless prior written permission is obtained
-    from Grindrod Bank Limited.
 
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
