--- a/shared-libraries/resource-server-policy-enforcement/java/za.co.grindrodbank.security.java/pom.xml
+++ b/shared-libraries/resource-server-policy-enforcement/java/za.co.grindrodbank.security.java/pom.xml
@@ -119,7 +119,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
-				<version>3.0.1</version>
+				<version>3.2.0</version>
 				<executions>
 					<execution>
 						<id>attach-sources</id>
@@ -135,7 +135,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
-				<version>3.0.1</version>
+				<version>3.2.0</version>
 				<executions>
 					<execution>
 						<id>attach-sources</id>
@@ -150,7 +150,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
-				<version>2.10.4</version>
+				<version>3.2.0</version>
 
 				<configuration>
 					<encoding>UTF-8</encoding>
@@ -168,7 +168,7 @@
 	</build>
 
 
-	<scm> git@github.com:GrindrodBank/A3S.git
+	<scm>
 		<connection>scm:git:git://github.com/GrindrodBank/A3S.git</connection>
 		<developerConnection>scm:git:git@github.com:GrindrodBank/A3S.git</developerConnection>
 		<url>https://github.com/GrindrodBank/A3S</url>
