--- a/src/za.co.grindrodbank.a3s/za.co.grindrodbank.a3s.csproj
+++ b/src/za.co.grindrodbank.a3s/za.co.grindrodbank.a3s.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Remove="Views\Home\Privacy.cshtml" />
+    <Content Remove="wwwroot\img\A3S_logo_icon_only.png" />
   </ItemGroup>
   <ItemGroup>
     <Content Update="nlog.config">
