Central set and correct retrieval of release version.

--- a/src/za.co.grindrodbank.a3s/za.co.grindrodbank.a3s.csproj
+++ b/src/za.co.grindrodbank.a3s/za.co.grindrodbank.a3s.csproj
@@ -3,7 +3,8 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
-    <ReleaseVersion>1.0.1</ReleaseVersion>
+    <ReleaseVersion>1.0.2</ReleaseVersion>
+    <Description>A3S Management API</Description>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
