--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -187,7 +187,6 @@ jobs:
   build-java-libs:
     docker:
       - image: maven:3.5.3-jdk-8-alpine
-    working_directory: ~/build/shared-libraries/java/za.co.grindrodbank.security.java
     steps:
       # Update, upgrade, then install git and openssh 
       # as the container doesn't have these installed
@@ -195,9 +194,12 @@ jobs:
       - run: apk update
       - run: apk upgrade
       - run: apk --no-cache add --update git openssh
+      - run: cd ~/build && git init
       - checkout:
           path: ~/build
-      - run: mvn clean install
+      - run: 
+          working_directory: ~/build/shared-libraries/java/za.co.grindrodbank.security.java
+          command: mvn clean install
   a3s-docker-build-push:
     docker:
       - image: docker:18.09.3
