Introduced asp.net identity code into customer user manager and custom sign in manager in order to debug issue happening with Postman.

--- a/src/za.co.grindrodbank.a3s-identity-server/za.co.grindrodbank.a3s-identity-server.csproj
+++ b/src/za.co.grindrodbank.a3s-identity-server/za.co.grindrodbank.a3s-identity-server.csproj
@@ -194,5 +194,8 @@
     <Compile Include="..\za.co.grindrodbank.a3s\A3SConstants.cs">
       <Link>A3SConstants.cs</Link>
     </Compile>
+    <Compile Include="..\za.co.grindrodbank.a3s\Managers\Base32.cs">
+      <Link>Managers\Base32.cs</Link>
+    </Compile>
 </ItemGroup>
 </Project>
