--- a/src/za.co.grindrodbank.a3s/za.co.grindrodbank.a3s.csproj
+++ b/src/za.co.grindrodbank.a3s/za.co.grindrodbank.a3s.csproj
@@ -43,6 +43,7 @@
     <Folder Include="Helpers\" />
     <Folder Include="Managers\" />
     <Folder Include="Stores\" />
+    <Folder Include="ConnectionClients\" />
   </ItemGroup>
   <ItemGroup>
     <Content Remove="Views\Home\Privacy.cshtml" />
