Added generated license files to the new sub realms and associated sub realm mapping models. Updated the CS project file for identity server to pick up the newly added files that are linked to the project.

--- a/src/za.co.grindrodbank.a3s-identity-server/za.co.grindrodbank.a3s-identity-server.csproj
+++ b/src/za.co.grindrodbank.a3s-identity-server/za.co.grindrodbank.a3s-identity-server.csproj
@@ -116,6 +116,12 @@
     <Compile Include="..\za.co.grindrodbank.a3s\Models\UserTokenModel.cs">
       <Link>Models\UserTokenModel.cs</Link>
     </Compile>
+    <Compile Include="..\za.co.grindrodbank.a3s\Models\SubRealmModel.cs">
+      <Link>Models\SubRealmModel.cs</Link>
+    </Compile>
+    <Compile Include="..\za.co.grindrodbank.a3s\Models\SubRealmPermissionModel.cs">
+      <Link>Models\SubRealmPermissionModel.cs</Link>
+    </Compile>
     <Compile Include="..\za.co.grindrodbank.a3s\Repositories\UserRepository.cs">
       <Link>Repositories\UserRepository.cs</Link>
     </Compile>
