Added profile models to the A3S and IDS4 projects. Set up relationships between the profile model and other models. Updated the IDS4 .csproj file to contain a reference to the profile model within the A3S project.

--- a/src/za.co.grindrodbank.a3s-identity-server/za.co.grindrodbank.a3s-identity-server.csproj
+++ b/src/za.co.grindrodbank.a3s-identity-server/za.co.grindrodbank.a3s-identity-server.csproj
@@ -119,6 +119,9 @@
     <Compile Include="..\za.co.grindrodbank.a3s\Models\SubRealmModel.cs">
       <Link>Models\SubRealmModel.cs</Link>
     </Compile>
+    <Compile Include="..\za.co.grindrodbank.a3s\Models\ProfileModel.cs">
+      <Link>Models\ProfileModel.cs</Link>
+    </Compile>
     <Compile Include="..\za.co.grindrodbank.a3s\Models\SubRealmPermissionModel.cs">
       <Link>Models\SubRealmPermissionModel.cs</Link>
     </Compile>
