Adding models for the many to many relationship between profiles and teams. Updated the A3S database context with customisations for the many to mnay relationship between teams and profiles.

--- a/src/za.co.grindrodbank.a3s-identity-server/za.co.grindrodbank.a3s-identity-server.csproj
+++ b/src/za.co.grindrodbank.a3s-identity-server/za.co.grindrodbank.a3s-identity-server.csproj
@@ -128,6 +128,9 @@
     <Compile Include="..\za.co.grindrodbank.a3s\Models\ProfileRoleModel.cs">
       <Link>Models\ProfileRoleModel.cs</Link>
     </Compile>
+    <Compile Include="..\za.co.grindrodbank.a3s\Models\ProfileTeamModel.cs">
+      <Link>Models\ProfileTeamModel.cs</Link>
+    </Compile>
     <Compile Include="..\za.co.grindrodbank.a3s\Repositories\UserRepository.cs">
       <Link>Repositories\UserRepository.cs</Link>
     </Compile>
