--- a/src/za.co.grindrodbank.a3s-identity-server/za.co.grindrodbank.a3s-identity-server.csproj
+++ b/src/za.co.grindrodbank.a3s-identity-server/za.co.grindrodbank.a3s-identity-server.csproj
@@ -131,6 +131,9 @@
     <Compile Include="..\za.co.grindrodbank.a3s\Models\ProfileTeamModel.cs">
       <Link>Models\ProfileTeamModel.cs</Link>
     </Compile>
+    <Compile Include="..\za.co.grindrodbank.a3s\Models\SubRealmApplicationDataPolicyModel.cs">
+      <Link>Models\SubRealmApplicationDataPolicyModel.cs</Link>
+    </Compile>
     <Compile Include="..\za.co.grindrodbank.a3s\Repositories\UserRepository.cs">
       <Link>Repositories\UserRepository.cs</Link>
     </Compile>
