--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -196,8 +196,8 @@ jobs:
       - run: 
           name: Verify installations
           command: apk --no-cache add --update git openssh gnupg
-      - run: gpg --version; git version; 
-      - run: cd ~/build && git init && ssh -V
+      - run: gpg --version; git version; ssh -V
+      - run: cd ~/build && git init
       - checkout:
           path: ~/build
       - run: 
