--- a/src/za.co.grindrodbank.a3s-identity-server/za.co.grindrodbank.a3s-identity-server.csproj
+++ b/src/za.co.grindrodbank.a3s-identity-server/za.co.grindrodbank.a3s-identity-server.csproj
@@ -26,6 +26,7 @@
     <PackageReference Include="IdentityServer4.EntityFramework" Version="3.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.0" />
     <PackageReference Include="System.Net.Http" Version="4.3.4" />
+    <PackageReference Include="System.Net.Security" Version="4.3.2" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Services\" />
