diagnostics to inspect filesystem layout after checkout

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -200,6 +200,7 @@ jobs:
       - run: mkdir ~/build && cd ~/build 
       - checkout:
           path: ~/build
+      - run: pwd; ls -l; find ~/build
       - run: 
           working_directory: ~/build/shared-libraries/java/za.co.grindrodbank.security.java
           command: mvn clean install
