Master branch force to test sonarscanner config.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,7 +51,7 @@ jobs:
             -o:"$SONAR_ORG" \
             -d:sonar.host.url=https://sonarcloud.io \
             -d:sonar.login="$SONAR_AUTH_TOKEN" \
-            -d:sonar.branch.name=$CIRCLE_BRANCH \
+            -d:sonar.branch.name=master \
             -d:sonar.test.inclusions="tests/**/*" \
             -d:sonar.sourceEncoding=UTF-8 \
             -d:sonar.exclusions=**/Data/**,**/Migrations/**,**/wwwroot/**,**/A3SApiResources/**,**/AbstractApiControllers/**,**/Models/**,**/Repositories/**,**/db/**,**/Views/**,**/shared-libraries/**,**/ConnectionClients/**,**/Quickstart/Consent/**,**/Quickstart/Device/**,**/Quickstart/Grants/**,**/Quickstart/Diagnostics/** \
