--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -200,6 +200,7 @@ jobs:
       - run:
           name: import GPG key
           command: echo -e "$GPG_KEY" | gpg --import
+      - run: gpg --list-keys
       - run:
           name: decrypt secrets
           command: echo "$GPG_PASSPHRASE" | PASSPHRASE="$GPG_PASSPHRASE" gpg --batch --no-tty --pinentry-mode loopback --command-fd 0 --output secrets.env --decrypt secrets.env.gpg || echo $?    
