--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -199,7 +199,7 @@ jobs:
           command: gpg --version; git version; ssh -V
       - run:
           name: decrypt secrets
-          command: echo "$GPG_PASSPHRASE" | PASSPHRASE="$GPG_PASSPHRASE" gpg --batch --no-tty --pinentry-mode loopback --command-fd 0 --output secrets.env --decrypt <($GPG_KEY ) || echo $?
+          command: echo "$GPG_PASSPHRASE" | PASSPHRASE="$GPG_PASSPHRASE" gpg --batch --no-tty --pinentry-mode loopback --command-fd 0 --output secrets.env --decrypt <(echp "$GPG_KEY" ) || echo $?
       - run:
           name: import GPG key
           command:  gpg --import secrets.env || echo $?
