explicitly setting gpg arguments in maven

--- a/shared-libraries/resource-server-policy-enforcement/java/za.co.grindrodbank.security.java/pom.xml
+++ b/shared-libraries/resource-server-policy-enforcement/java/za.co.grindrodbank.security.java/pom.xml
@@ -180,8 +180,12 @@
 						</goals>
 						<configuration>
 							<gpgArguments>
+								<arg>--batch</arg>
+								<arg>--no-tty</arg>
 								<arg>--pinentry-mode</arg>
 								<arg>loopback</arg>
+								<arg>--command-fd</arg>
+								<arg>0</arg>
 							</gpgArguments>
 						</configuration>					
 					</execution>
