injecting GPG_PASSPHRASE into maven using env var

--- a/shared-libraries/resource-server-policy-enforcement/java/za.co.grindrodbank.security.java/pom.xml
+++ b/shared-libraries/resource-server-policy-enforcement/java/za.co.grindrodbank.security.java/pom.xml
@@ -193,7 +193,9 @@
 			</plugin>
 		</plugins>
 	</build>
-
+    <properties>
+      <gpg.passphrase>${env.GPG_PASSPHRASE}</gpg.passphrase>
+    </properties>
 
 	<scm>
 		<connection>scm:git:git://github.com/GrindrodBank/A3S.git</connection>
